{
    "name": "MotionInputControls",
    "maps": [
        {
            "name": "MotionControls",
            "id": "b8fbac4e-80d6-4c8d-b712-724f589c1a18",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "db31c4f8-d19d-4b8c-b3c2-80cd21977ea3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "9072e729-52de-46fe-a94e-bd2c949ad502",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0ece5b97-f03b-4f1f-9b44-b5b92eb60c9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LightSwing",
                    "type": "Button",
                    "id": "71de460a-2a84-4312-b1a3-047471c42a09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavySwing",
                    "type": "Button",
                    "id": "9f499d64-fc76-42c3-9156-908d2bbe925e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fireball",
                    "type": "Button",
                    "id": "876b195e-cd21-45a5-831f-7e52fcfd7a7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThirdPersonView",
                    "type": "Button",
                    "id": "6308bb90-2eac-47fe-b1d3-5ea8d3c80425",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavySpellOne",
                    "type": "Button",
                    "id": "213b7409-1420-4400-99b0-da377763abb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavySpellTwo",
                    "type": "Button",
                    "id": "8115d8c7-db4a-4ce3-a6fc-2ed6b6fdb31a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SheaveSword",
                    "type": "Button",
                    "id": "d5fc9dee-8b10-40d9-96bd-ea5a8c91fbbb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SheaveShield",
                    "type": "Button",
                    "id": "96b14adc-b9dc-42e4-8f2e-4d1771c514c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "363936e6-41e1-4477-ab78-2dd347a88c5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6780c31-784b-478c-8b08-8f48d5144002",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b63d6fec-fdb8-4143-a640-acda60a0cfa5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9b84375-2e8a-404f-a754-cee3c44db9b1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dec81545-7f4d-44b8-ab35-2c92d44744a0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightSwing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f5d34c3-fdb9-40bc-93a9-9522c5f3ea70",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavySwing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a40987a5-17e8-4d71-80b6-4a0c6bf1c679",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fireball",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c13ed4f-101f-466f-8e5b-a12cadf25b65",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdPersonView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09d7b189-5e05-4f9d-83ed-b28570e6b14b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavySpellOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef2cf490-9f32-42c7-a73f-78800ed37fb4",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavySpellTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6690430-188e-4df7-a7a3-c7f847ed4dc6",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SheaveSword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26493e36-3e51-4bb6-8d8e-0ca0343cf388",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SheaveShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a501f79-9480-414e-9253-d83c98371f2d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}